--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -17,7 +17,7 @@
                 <div class="panel-body">
                     <p><a href="{{ url_for('user_add') }}" target="show">添加用户</a></p>
                     <p><a href="{{ url_for('user_select') }}" target="show">查询用户</a></p>
-                    <p><a href="http://www.sina.com.cn/" target="show">用户信息</a></p>
+                    <p><a href="{{ url_for('userinfo',id='1005')}}" target="show">用户信息</a></p>
                     <p><a href="https://www.baidu.com/" target="show">管理员信息</a></p>
                 </div>
             </div>
