--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -33,7 +33,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p><a href="https://www.baidu.com/" target="show">添加会议室</a></p>
+                    <p><a href="{{ url_for('conference_add') }}" target="show">添加会议室</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">查询会议室</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">会议室信息</a></p>
                     <p><a href="https://www.baidu.com/" target="show">会议室审批</a></p>
