--- a/pro/templates/admin_list.html
+++ b/pro/templates/admin_list.html
@@ -4,7 +4,7 @@
 	<table class="table table-bordered table-hover">
 		<caption>
 			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
-  				<span class="glyphicon glyphicon-th-list"></span>用户列表
+  				<span class="glyphicon glyphicon-th-list"></span>管理员列表
 			</button>	
 			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-trash"></span>删除
