--- a/pro/templates/conference_select.html
+++ b/pro/templates/conference_select.html
@@ -15,7 +15,7 @@
             </tr>
         </thead>
         <tbody>
-            <form class="" role="form" method="POST" action="/users/add">
+            <form class="" role="form" method="POST" action="/conference/select">
             <tr>
                     <td><label for="id" class="control-label pull-right">申请人账号:</label></td>
                     <td><input type="text" class="form-control" name="id" 
