--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -2,14 +2,14 @@
 {% block login %}
 <div class="container btn-danger login-admin">
 	<div class="login-admin-input">
-		<form class="bs-example bs-example-form" role="form" method="post" action="/login/admin">
+		<form class="bs-example bs-example-form" role="form" method="POST" action="/adminlogin">
 			<div class="input-group input-group-lg">
 				<span class="input-group-addon">用户</span>
-				<input type="text" class="form-control" id="user" placeholder="请输入用户名">
+				<input type="text" class="form-control" name="user" placeholder="请输入用户名">
 			</div><br>
 			<div class="input-group input-group-lg">
 				<span class="input-group-addon">密码</span>
-				<input type="text" class="form-control" id="passwd" placeholder="请输入密码">
+				<input type="password" class="form-control" pwd="passwd" placeholder="请输入密码">
 			</div><br>
 			<div class="input-group input-group-lg">
 				<button type="submit" class="btn btn-default">登陆</button>
