--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -2,7 +2,7 @@
 {% block login %}
 <div class="container btn-danger login-admin">
 	<div class="login-admin-input">
-		<form class="bs-example bs-example-form" role="form" method="POST" action="/adminlogin">
+		<form class="bs-example bs-example-form" role="form" method="post" action="/adminlogin">
 			<div class="input-group input-group-lg">
 				<span class="input-group-addon">用户</span>
 				<input type="text" class="form-control" name="user" placeholder="请输入用户名">
