--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -9,7 +9,7 @@
 			</div><br>
 			<div class="input-group input-group-lg">
 				<span class="input-group-addon">密码</span>
-				<input type="password" class="form-control" pwd="passwd" placeholder="请输入密码">
+				<input type="password" class="form-control" name="passwd" placeholder="请输入密码">
 			</div><br>
 			<div class="input-group input-group-lg">
 				<button type="submit" class="btn btn-default">登陆</button>
