--- a/pro/templates/admin_edit.html
+++ b/pro/templates/admin_edit.html
@@ -15,7 +15,7 @@
             </tr>
         </thead>
         <tbody>
-            <form class="" role="form" method="POST" action="/users/add">
+            <form class="" role="form" method="POST" action="{{ url_for('admin_info_edit',id=session['id']) }}">
             <tr>
                     <td><label for="adminid" class="control-label pull-right">管理员编号:</label></td>
                     <td><input type="text" class="form-control" name="adminid" value="{{ tuple_result[0][0] }}" 
