--- a/pro/templates/admin_info_show.html
+++ b/pro/templates/admin_info_show.html
@@ -4,7 +4,7 @@
 <table class="table table-bordered table-hover">
         <caption>
             <button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
-                <span class="glyphicon glyphicon-th-list"></span>更新管理员帐号
+                <span class="glyphicon glyphicon-th-list"></span>管理员个人资料
             </button>   
         </caption>
         <div class="container">
@@ -18,76 +18,85 @@
             <tr>
                 <td><label for="adminid" class=" control-label pull-right">管理员编号:</label></td>
                 <td><input type="text" class="form-control" name="adminid"  value="{{ tuple_result[0][0] }}" 
-                           placeholder="请输入管理员编号">
+                           placeholder="请输入管理员编号" readonly>
                 </td>
             <tr>
                 <td><label for="adminName" class=" control-label pull-right">管理员姓名:</label></td>
                 <td><input type="text" class="form-control" name="adminName"  value="{{ tuple_result[0][1] }}" 
-                           placeholder="请输入管理员姓名">
+                           placeholder="请输入管理员姓名" readonly>
                 </td>
             </tr>
             <tr>
                 <td><label for="adminPassQuestion" class=" control-label pull-right">密码保护问题:</label></td>
                 <td><input type="text" class="form-control" name="adminPassQuestion" value="{{ tuple_result[0][2] }}" 
-                           placeholder="请输入密码保护问题">
+                           placeholder="请输入密码保护问题" readonly>
                 </td>
             </tr>
            <tr>
                 <td><label for="adminTrueName" class=" control-label pull-right">管理员真实姓名:</label></td>
                 <td><input type="text" class="form-control" name="adminTrueName" value="{{ tuple_result[0][3] }}" 
-                           placeholder="请输入管理员真实姓名">
+                           placeholder="请输入管理员真实姓名" readonly>
                 </td>
             </tr>
            <tr> 
                 <td><label for="adminAddress" class=" control-label pull-right">管理员联系地址:</label></td>
                 <td><input type="text" class="form-control" name="adminAddress" value="{{ tuple_result[0][4] }}" 
-                           placeholder="请输入管理员联系地址">
+                           placeholder="请输入管理员联系地址" readonly>
                 </td>
             </tr>
            <tr>
                 <td><label for="adminEmail" class=" control-label pull-right">管理员邮件:</label></td>
                 <td><input type="text" class="form-control" name="adminEmail" value="{{ tuple_result[0][5] }}" 
-                           placeholder="请输入管理员邮件"></td>
+                           placeholder="请输入管理员邮件" readonly>
+                </td>
             </tr>
            <tr>
                 <td><label for="adminSpecialty" class=" control-label pull-right">专业名称:</label></td>
                 <td><input type="text" class="form-control" name="adminSpecialty" value="{{ tuple_result[0][6] }}" 
-                           placeholder="请输入专业名称"></td>            
+                           placeholder="请输入专业名称" readonly>
+                </td>            
             </tr>
            <tr>     
                 <td><label for="adminHuji" class=" control-label pull-right">户 籍:</label></td>
                 <td> <input type="text" class="form-control" name="adminHuji"  value="{{ tuple_result[0][7] }}" 
-                           placeholder="请输入户 籍"></td> 
+                           placeholder="请输入户 籍" readonly>
+                </td> 
             </tr>
            <tr> 
                 <td><label for="adminIDcard" class=" control-label pull-right">身份证:</label></td>
                 <td><input type="text" class="form-control" name="adminIDcard"  value="{{ tuple_result[0][8] }}" 
-                           placeholder="请输入身份证"></td>
+                           placeholder="请输入身份证" readonly>
+                </td>
             </tr>
            <tr>   
                 <td><label for="adminCsrq" class=" control-label pull-right">出生日期:</label></td>
                 <td><input type="text" class="form-control" name="adminCsrq" value="{{ tuple_result[0][9] }}" 
-                           placeholder="请输入出生日期"></td>
+                           placeholder="请输入出生日期" readonly>
+                </td>
             </tr>
            <tr>  
                 <td><label for="adminJiguan" class=" control-label pull-right">籍 贯:</label></td>
                 <td><input type="text" class="form-control" name="adminJiguan"  value="{{ tuple_result[0][10] }}" 
-                           placeholder="请输入籍 贯"></td>
+                           placeholder="请输入籍 贯" readonly>
+                </td>
             </tr>
            <tr>
                 <td><label for="adminAge" class=" control-label pull-right">管理员年龄:</label></td>
                 <td> <input type="text" class="form-control" name="adminAge"  value="{{ tuple_result[0][11] }}" 
-                           placeholder="请输入管理员年龄"></td>
+                           placeholder="请输入管理员年龄" readonly>
+                </td>
             </tr>
            <tr>
                 <td><label for="adminSex" class=" control-label pull-right">管理员性别:</label></td>
                 <td><input type="text" class="form-control" name="adminSex" value="{{ tuple_result[0][12] }}" 
-                           placeholder="请输入管理员性别"></td>
+                           placeholder="请输入管理员性别" readonly>
+                </td>
             </tr>
             <tr>
                 <td><label for="adminPhone" class=" control-label pull-right">联系电话:</label></td>
                 <td> <input type="text" class="form-control" name="adminPhone" value="{{ tuple_result[0][13] }}" 
-                           placeholder="请输入联系电话"></td>
+                           placeholder="请输入联系电话" readonly>
+                </td>
             </tr>
             <tr>
                 <td colspan="2"><button class="btn btn-default"  onclick="javascript:history.back(-1);">返回</button></td>
