--- a/pro/static/css/bounty.css
+++ b/pro/static/css/bounty.css
@@ -15,11 +15,13 @@
 
 .login-admin
 {
-	margin:200px 100px 100px 200px;
+	width: 300px;
+    height: 200px;
 }
 .login-admin-input
 {
-	margin:300px 100px 100px 300px;
+	width: 200px;
+    height: 100px;
 }
 .users-list
 {
