--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -13,7 +13,7 @@
 			</div><br>
 			<div class="input-group input-group-lg">
 				<button type="submit" class="btn btn-default">登陆</button>
-				<button class="btn btn-default"><a href="{{ url_for('user_add') }}">注册</a></button>
+				<button class="btn btn-default"><a href="{{ url_for('user_registered') }}">注册</a></button>
 			</div>
 		</form>
 	</div>
